# Bau

./: .gitignore  Cargo.toml  Makefile  README.md  nodemon.json  package-lock.json  package.json  webpack-dev.config.js  webpack.config.js
bau/: Cargo.toml
bau/src/: body.rs  constraint.rs  lib.rs
bau/src/body/: builder.rs
bau/src/constraint/: fixed_distance.rs  spring.rs
bau_test_suite/: Cargo.toml
bau_test_suite/src/: main.rs  render.rs
bau_test_suite/src/render/: body_render.rs  distance_render.rs  spring_render.rs
src/: index.html
src/js/: Engine.js  Performance.js  PerformanceRender.js  Physics.js  Render.js  RenderMethods.js  Ticker.js  Vec2.js  World.js  index.js
src/rust/: Cargo.toml
src/rust/src/: bodies.rs  body.rs  bounds.rs  collision_pair.rs  color.rs  console_log.rs  debug.rs  engine.rs  grid.rs  lib.rs  physics.rs  vec2.rs  world.rs
src/rust/src/bodies/: body.rs
src/rust/src/body/: body_options.rs  body_render.rs
src/rust/src/physics/: collisions.rs  solver.rs
