[workspace]
resolver = "3"
members = ["bau", "bau_test_suite"]

[workspace.dependencies]
bevy = { version = "0.18.0", features = ["dynamic_linking"] }
bevy_prototype_lyon = "0.16.0"
bau = { path = "bau" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
