[package]
name = "bau_test_suite"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_prototype_lyon = { workspace = true }
bau = { workspace = true}

[[bin]]
name = "bau_test_suite"
path = "src/main.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
