[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.76"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
nohash-hasher = "0.2.0"

[dependencies.web-sys]
version = "0.3.76"
features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window', 'console']

[lib]
crate-type = ["cdylib", "rlib"]
