[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.76"
rand = { version = "0.9.2" }
wasm-bindgen = "0.2.106"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
nohash-hasher = "0.2.0"
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3.76"
features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window', 'console']

[lib]
crate-type = ["cdylib", "rlib"]
